<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinalOne</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="to">To</string>
    <string name="mydcsapp">MyDCSApp</string>
    <string name="todo">TODO</string>
    <string name="Login">Log In</string>
    <string name="phn">Phone Number</string>
    <string name="Password">password</string>
    <string name="Phone">0xx xxxx xxx</string>
    <string name="Add_Data">Add Data</string>
    <string name="Share_Data">Share Data</string>
    <string name="Bill">Bill</string>
    <string name="Registration">Registration</string>
    <string name="Full">Full Name</string>
    <string name="Email">Email Address</string>
    <string name="Re_Enter">Re-enter password</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Bill_Period">Bill Period</string>
    <string name="Date" tools:ignore="TypographyDashes">20th Aug 2020 - 19th Sep 2020</string>
    <string name="Current">Current Usage</string>
    <string name="Additional">Additional Data</string>
    <string name="Total">Total Amount</string>
    <string name="Last_month">Last Month Aries</string>
    <string name="Pay">Pay</string>
    <string name="MEdit">Edit My Profile</string>
    <string name="My_profile">Profile</string>
    <string name="Manudi">Manudi Sathmini</string>
    <string name="phone">0812404790</string>
    <string name="MEmail">manudisathmini@gmail</string>

    <string name="ShareData">ShareData</string>
    <string name="Report">Report</string>
    <string name="NShareForm">Form</string>
    <string name="NShareID">Share data ID</string>
    <string name="NResultShareDataID">Auto generated</string>
    <string name="NPhnFrm">Phone No From</string>
    <string name="NPhn_To">Phone No To</string>
    <string name="NAmount_Data">Amount of Data</string>
    <string name="NDate">Date</string>
    <string name="NPhnFromResult">Auto genetated</string>
    <string name="NPhnToResult">Enter phone number</string>
    <string name="NamtofdataResult">Amount of Data(In MB)</string>
    <string name="NamtResult">Enter amount of data</string>
    <string name="NDateResult">Auto generated</string>
    <string name="NFormSubmit">Submit</string>
    <string name="NDetails">Details of shared data</string>
    <string name="NAmountleft">Amount left</string>
    <string name="N_edit">Edit</string>
    <string name="NReport">Report</string>
    <string name="NReportSubmit">submit</string>
    <string name="NEnter">Enter any phone number to get details</string>
    <string name="NReportDetails">Details are as follows....</string>
    <string name="NDate2">Date</string>
    <string name="NReportAmt">Amount of data transferred</string>
    <string name="NLast10">Note:Only last 10 transactions will be visible</string>
    <string name="NDialog">OK</string>
    <string name="NBack">Back</string>
    <string name="NToast">.......!!!!  Processing Request  !!!!!</string>

    <string name="p_selectpackagebtn">SELECT PACKAGE</string>
    <string name="p_addmoredatabtn">ADD MORE DATA</string>
    <string name="p_viewmypackagesbtn">VIEW MY PACKAGES</string>
    <string name="p_viewpack">VIEW PACKAGE</string>
    <string name="p_packdetails">PACKAGE DETAILS</string>
    <string name="p_packid">PACKAGE ID</string>
    <string name="p_packname">PACKAGE NAME</string>
    <string name="p_packanytimedata">ANY TIME DATA</string>
    <string name="p_packnightdata">NIGHT TIME DATA</string>
    <string name="p_packvalidity">VALIDITY</string>
    <string name="p_packprice">PRICE</string>
    <string name="p_fixpacksms">SMS</string>
    <string name="p_fixpackvoice">VOICE</string>
    <string name="p_dpdateto">DATE TO</string>
    <string name="p_dpdatefrom">DATE FROM</string>
    <string name="p_activate">ACTIVATE</string>
    <string name="p_fixedpackages">FIXED PACKAGES</string>
    <string name="p_fixpack1">WEB STARTER</string>
    <string name="p_fixpack2">WEB BOOSTER</string>
    <string name="p_fixpack3">WEB FAMILY</string>
    <string name="p_fixpack4">WEB PAL</string>
    <string name="p_fixvalid">1</string>
    <string name="p_fixvalpackname">WEB STARTER</string>
    <string name="p_fixvalvoice">50</string>
    <string name="p_fixvalanytimedata">11 GB</string>
    <string name="p_fixvalnightdata">17 GB</string>
    <string name="p_fixvalsms">50</string>
    <string name="p_fixvalvalidity">30 DAYS</string>
    <string name="p_fixvalprice">Rs.1000</string>
    <string name="p_datapackages">DATA PACKAGES</string>
    <string name="p_datapack1">1 DAY INTERNET</string>
    <string name="p_datapack2">3 DAY INTERNET</string>
    <string name="p_datapack3">7 DAY INTERNET</string>
    <string name="p_datapack4">21 DAY INTERNET</string>
    <string name="p_dpvalid">1</string>
    <string name="p_dpvalname">1 DAY INTERNET</string>
    <string name="p_dpvalanytimedata">1 GB</string>
    <string name="p_dpvalnightdata">1 GB</string>
    <string name="p_dpvaldatefrom">10/08/20</string>
    <string name="p_dpvaldateto">10/08/20</string>
    <string name="p_dpvalprice">RS.150</string>
    <string name="p_mypackages">MY PACKAGES</string>
    <string name="p_pack1">1.Package 1</string>
    <string name="p_pack2">2.Package 2</string>
    <string name="p_pack3">3.Package 3</string>
    <string name="p_pack4">4.Package 4</string>
    <string name="p_todo">TODO</string>

    <string name="c.payment">Payment</string>
    <string name="c.Credit_card">Credit card</string>
    <string name="c.cash">Cash</string>
    <string name="c.tot_amount">Total Amount payable</string>
    <string name="c.PhoneNo">0xx xxxx xxx</string>
    <string name="c.Date">29th Aug 2020</string>
    <string name="c.amount">Rs. xxx/=</string>
    <string name="c.payBefore">(Pay before 10th Sep 2020)</string>
    <string name="c.cargills">Through Cargill\'s Foodcity</string>
    <string name="c.branch_name">Branch name</string>
    <string name="c.branchNo">Branch number</string>
    <string name="c.cashDate">Date</string>
    <string name="c.cashTime">Time</string>
    <string name="c.cashbillno">Bill number</string>
    <string name="c.creditname">Holder\'s name</string>
    <string name="c.creditno">Card number</string>
    <string name="c.creditexpire">Expiry date</string>
    <string name="c.creditCVC">CVC</string>
    <string name="c.creditcheckbox">save my card details securely for faster payments.</string>
    <string name="c.creditterms">Terms and conditions apply</string>
    <string name="c.ok">OK</string>
    <string name="c.billnum">B001</string>
    <string name="c.cashsuccessful">Payment through cash is successful</string>
    <string name="c.Gotomenu">Go to menu</string>
    <string name="c.creditsuccessful">Payment through credit card is successful</string>
    <string name="c.viewcreditDetails">view my credit card details</string>
    <string name="c.creditcardnumber" tools:ignore="Typos">xxxx xxxx xxxx xxxx</string>
    <string name="c.holdersname">Nuwan Ariyathilake</string>
    <string name="c.edate">22/05/2040</string>
    <string name="c.cvc">0000 1111 2222 3333</string>
    <string name="c.creditcarddetails">Credit card details</string>
    <string name="c.updatebutton">Update</string>
    <string name="c.deletebutton">Delete</string>
    <string name="NLast3">Note:Only last 3 transactions will be visible</string>

</resources>